# sqd_download_manager

./: Cargo.toml  README.md
src/: chunk_metadata.rs  chunk_tracker.rs  error.rs  lib.rs  manager.rs
tests/: it.rs
