[package]
name = "sqd_download_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12" }
rangemap = { version = "1.5" }
tracing = { version = "0.1", features = ["log"] }
thiserror = { version = "1" }

[dev-dependencies]
mockito = { version = "1" }
tracing-subscriber = { version = "0.3" }
tempdir = { version = "0.3" }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
struct_excessive_bools = "allow"
trivially_copy_pass_by_ref = "allow"
must_use_candidate = "allow"
match_bool = "allow"
module_name_repetitions = "allow"

[lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
meta_variable_misuse = "warn"
missing_abi = "warn"
missing_copy_implementations = "warn"
# missing_debug_implementations = "warn" // triggers lint on provided code
non_ascii_idents = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
